BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Segmentation_Target_Frequency_BMS_CN__c.object
<CustomObject>
    <description>Segmentation Target Frequency</description>
    <fields>
        <fullName>Algorithm_BMS_CN__c</fullName>
        <description>Algorithm of Cycle Plan Calculation</description>
        <label>Algorithm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Algorithm_Products_BMS_CN__c</fullName>
        <description>Product(s) of the Algorithm</description>
        <label>Algorithm Products</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BU_BMS_CN__c</fullName>
        <description>BU</description>
        <label>BU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_Usage_Level_BMS_CN__c</fullName>
        <description>HP Usage Level</description>
        <label>HP Usage Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTC_Administrative_Title_BMS_CN__c</fullName>
        <label>OTC Administrative Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTC_Department_BMS_CN__c</fullName>
        <label>OTC Department</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTC_Outpatients_Monthly_Max_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Outpatients Monthly used specially for OTC</description>
        <label>OTC Outpatients Monthly Max</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTC_Outpatients_Monthly_Min_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OTC Outpatients Monthly Min</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTC_Pres_Amount_Monthly_Max_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>OTC Prescription Amount Monthly</description>
        <label>OTC Prescription Amount Monthly Max</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OTC_Pres_Amount_Monthly_Min_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OTC Prescription Amount Monthly Min</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Segmentation_BMS_CN__c</fullName>
        <description>Segmentation of Doctor (VH/H/M/L)</description>
        <label>Segmentation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Frequency_BMS_CN__c</fullName>
        <description>Target Frequency</description>
        <label>Target Frequency</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Max_BMS_CN__c</fullName>
        <description>Value_Max</description>
        <label>Value_Max</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value_Min_BMS_CN__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Value_Min</description>
        <label>Value_Min</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Segmentation Target Frequency</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BU_BMS_CN__c</columns>
        <columns>Algorithm_BMS_CN__c</columns>
        <columns>Algorithm_Products_BMS_CN__c</columns>
        <columns>Segmentation_BMS_CN__c</columns>
        <columns>Target_Frequency_BMS_CN__c</columns>
        <columns>Value_Max_BMS_CN__c</columns>
        <columns>Value_Min_BMS_CN__c</columns>
        <columns>HP_Usage_Level_BMS_CN__c</columns>
        <columns>OTC_Administrative_Title_BMS_CN__c</columns>
        <columns>OTC_Department_BMS_CN__c</columns>
        <columns>OTC_Outpatients_Monthly_Max_BMS_CN__c</columns>
        <columns>OTC_Outpatients_Monthly_Min_BMS_CN__c</columns>
        <columns>OTC_Pres_Amount_Monthly_Max_BMS_CN__c</columns>
        <columns>OTC_Pres_Amount_Monthly_Min_BMS_CN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Segmentation Target Frequency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segmentation Target Frequency</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>